Fixed issue where variable `@toolbar-button-spacing-x` was not respected on the first button in each button group

--- a/modules/oxide/src/less/theme/components/menubar/menubar.less
+++ b/modules/oxide/src/less/theme/components/menubar/menubar.less
@@ -28,6 +28,6 @@
     flex-shrink: 0;
     flex-wrap: wrap;
     margin-bottom: -1px;
-    padding: 0 @menubar-padding-x;
+    padding: 0 @menubar-padding-x 0 (@menubar-padding-x + @menubar-select-spacing-x);
   }
 }
